--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="newhome">
         <h4 class="home1">THE JOY OF HOME OWNING</h4>
         <h4 class="home2">Find Your New Home</h4>
+        <div class="learn-btn">Learn More</div>
       </div>
     </section>
   </body>
